2026-01-29T02:30:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21463339775 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 256 290 / 258 292
* notice: next accum: outdated-unq outdated-all / unq all: 258 292 / 261 295
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29] / [2026-01-16 2026-01-18 2026-01-19]

2025-12-31T00:50:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609276019 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 256 290 / 258 292
* notice: next accum: outdated-unq outdated-all / unq all: 256 290 / 258 292
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2025-12-24T00:48:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20475064934 # 848
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-24
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 255 289 / 258 292
* notice: next accum: outdated-unq outdated-all / unq all: 256 290 / 258 292
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0