@@ -3,16 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2026-01-13T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-14T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-15T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -69,6 +59,16 @@
     },
     {
       "timestamp": "2026-01-26T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-27T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-28T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
